# internal/dto/auth.go
@@ -1,16 +1,14 @@
-package handlers
+package dto
 
+// RegisterInput используется для регистрации нового пользователя
 type RegisterInput struct {
 	Name     string `json:"name" binding:"required"`
 	Email    string `json:"email" binding:"required,email"`
 	Password string `json:"password" binding:"required,min=6"`
 }
 
+// LoginInput используется для входа пользователя
 type LoginInput struct {
 	Email    string `json:"email" binding:"required,email"`
 	Password string `json:"password" binding:"required,min=6"`
-}
-
-type AuthResponse struct {
-	Token string `json:"token"`
 }
